[Wallet sync] Log more info for DCHECK failures

This CL annotates two DCHECKs in ModelTypeWorker with more info.

Bug: 898130
Change-Id: I0b1d6159552d7566a86b698e460213f72fb1a126
Reviewed-on: https://chromium-review.googlesource.com/c/1305513
Reviewed-by: Florian Uunk <feuunk@chromium.org>
Commit-Queue: Jan Krcal <jkrcal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603853}
Former-commit-id: bba2cbfc32be7d441a143d5c0c6b1ab28079fda8